Dashboard and home page

--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,12 @@
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/main.js"></script>
+    <script src="data/home-content.js"></script>
+    <script src="data/requestAndResponse.js"></script>
+    <script src="data/dashboardContent.js"></script>
+    <script src="scripts/controllers/homeController.js"></script>
+    <script src="scripts/controllers/dashboard/dashboardController.js"></script>
+    <script src="scripts/services/request-service.js"></script>
     <!-- endbuild -->
 </body>
 
